<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.victor.tttvictormax.MainActivity"
    android:background="@drawable/court"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:id="@+id/header" />


            <ImageButton
                android:id="@+id/square1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="33dp"
                android:src="@drawable/basketball"
                android:layout_gravity="right"
                android:onClick="onClickSq1"
                android:layout_below="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"></ImageButton>
            <ImageButton
                android:id="@+id/square2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:src="@drawable/basketball"
                android:onClick="onClickSq2"
                android:layout_alignTop="@+id/square1"
                android:layout_centerHorizontal="true"></ImageButton>
            <ImageButton
                android:id="@+id/square3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:src="@drawable/basketball"
                android:onClick="onClickSq3"
                android:layout_alignTop="@+id/square2"
                android:layout_alignRight="@+id/linearLayout"
                android:layout_alignEnd="@+id/linearLayout"></ImageButton>
            <ImageButton
                android:id="@+id/square4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/basketball"
                android:layout_gravity="right"
                android:onClick="onClickSq4"
                android:layout_alignTop="@+id/square5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"></ImageButton>
            <ImageButton
                android:id="@+id/square5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="110dp"
                android:layout_gravity="right"
                android:src="@drawable/basketball"
                android:layout_alignTop="@+id/square1"
                android:layout_centerHorizontal="true"
                android:onClick="onClickSq5"></ImageButton>
            <ImageButton
                android:id="@+id/square6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:src="@drawable/basketball"
                android:onClick="onClickSq6"
                android:layout_alignTop="@+id/square5"
                android:layout_alignLeft="@+id/square3"
                android:layout_alignStart="@+id/square3"></ImageButton>
            <ImageButton
                android:id="@+id/square7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="254dp"
                android:src="@drawable/basketball"
                android:layout_gravity="right"
                android:layout_below="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClickSq7"></ImageButton>
            <ImageButton
                android:id="@+id/square8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="220dp"
                android:layout_gravity="right"
                android:src="@drawable/basketball"
                android:layout_alignTop="@+id/square1"
                android:layout_centerHorizontal="true"
                android:onClick="onClickSq8"></ImageButton>
            <ImageButton
                android:id="@+id/square9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:src="@drawable/basketball"
                android:onClick="onClickSq9"
                android:layout_above="@+id/linearLayout"
                android:layout_alignLeft="@+id/square6"
                android:layout_alignStart="@+id/square6"></ImageButton>


    <TextView
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:text="@string/playerOpponentIsDroid"
        android:textColor="#ffdd00"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_weight="6.60"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/playerOpponentIsDroid" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="fill_parent"
        android:layout_below="@+id/square7"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="75dp"
            android:layout_height="34dp"
            android:text="@string/reset"
            android:id="@+id/resetButton"
            android:layout_marginBottom="48dp"
            android:layout_marginRight="6dp"
            android:background="#ffea00"
            android:textSize="12sp"
            android:onClick="onResetClick"
            android:visibility="visible" />

        <Button
            android:layout_width="75dp"
            android:layout_height="34dp"
            android:text="@string/about"
            android:id="@+id/aboutButton"
            android:layout_marginBottom="48dp"
            android:layout_marginRight="6dp"
            android:background="#ffea00"
            android:textSize="12sp"
            android:onClick="onAboutClick" />

        <Button
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/zero"
            android:id="@+id/zeroButton"
            android:layout_marginBottom="48dp"
            android:layout_marginRight="6dp"
            android:background="#ffea00"
            android:textSize="12sp"
            android:onClick="onZeroClick" />

        <Button
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/scores"
            android:id="@+id/scoresButton"
            android:layout_marginBottom="48dp"
            android:layout_marginRight="6dp"
            android:background="#ffea00"
            android:textSize="12sp"
            android:onClick="onScoresClick" />

        <Button
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:text="@string/play"
            android:id="@+id/playButton"
            android:background="#ffea00"
            android:textSize="12sp"
            android:onClick="onPlayClick"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/square9"
            android:layout_alignEnd="@+id/square9" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerOpponentIsHuman"
        android:id="@+id/playerOpponentIsHuman"
        android:textColor="#ffdd00"
        android:textSize="24sp"
        android:visibility="invisible"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
